--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
     // http://tools.android.com/tech-docs/new-build-system/version-compatibility
     // and https://issues.apache.org/jira/browse/CB-8143
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.1'
     }
 }
 
@@ -178,7 +178,8 @@ android {
     defaultConfig {
         versionCode cdvVersionCode ?: new BigInteger("" + privateHelpers.extractIntFromManifest("versionCode"))
         applicationId privateHelpers.extractStringFromManifest("package")
-        minSdkVersion 16
+        minSdkVersion 21
+        multiDexEnabled true
 
         if (cdvMinSdkVersion != null) {
             minSdkVersion cdvMinSdkVersion
